+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.
Latest changes go on top, different types of changes may be mixed.

Changes in ATK 6.3
------------------
* Make use of newer atkTriggerError in emailAttribute for triggering attribute
  errors so labels are filled correctly. [Tjeerd]
+ Added atkGetCharset() function to atkTools, it first checks the config
  default_charset and has a fallback to the charset in the language
  file. [Sandy]
* Changed all atktext('charset') calls into atkGetCharset() [Sandy]
* Fixed displaying of special chars in atkmanytoonerelation
  dropdowns [Sandy,Jeroen]
+ Added atkString class in the utils which is always loaded. It contains string
  functions that will use the mbstring extension if it's detected. If you have the
  extension and don't want to use it, you can use the config use_mbstring to turn
  it off. atkString contains at the moment functions for: strlen, substr, charAt
  strpos, strtolower, strtoupper. [Sandy]
* atkMailer class now uses atk's default charset as it's own default charset
  [Patrick]
+ Added querycounter to atkDebugger. [Tjeerd]
* ATK now tries to create the compiled templates directory when it did not
  already exist. [Marc]
* Fixed issue where in some rare occasions the selection was remembered for a
  MRA action. [Tjeerd]
+ Added initialvalue support to atkshuttlerelation. [Melvin]
* It showed a litle bit of white just below the menu logo. [Martin]
* Fixed extended search in one2many relations. [Martin]
* Do not force template compilation in the frontcontroller. [Tjeerd]
* Fixed column length support for the decimal, double and float types in the
  mysql driver. [Mvdvelden]
* Fixed the missing getDbStatus method in atkDb. [Mvdvelden]
* Fixed bug which caused the first field always to be selected after